<resources>
    <string name="app_name">YunChat</string>
    <string name="login_title">Sign In</string>
    <string name="login_username_hint">Please enter your username</string>
    <string name="login_pasword_hint">Please enter your password</string>
    <string name="login_button_submit">Sign In</string>
    <string name="password_forget">Do you forget the password</string>
    <string name="login_goto_register">No account？go to register</string>
    <string name="home_bottom_tag_messages">messages</string>
    <string name="home_bottom_tag_friends">friends</string>
    <string name="home_bottom_tag_find">discoveries</string>
    <string name="home_bottom_tag_my">my</string>
    <string name="account_htnt">please enter your username</string>
    <string name="email_htnt">please enter your email</string>
    <string name="password_htnt">please enter your password</string>
    <string name="birthday_htnt">please enter your birthday</string>
    <string name="address_htnt">please enter your address</string>
    <string name="register">register</string>
    <string name="confirm_htnt">please enter your password again</string>
    <string name="new_friend_menu">new friend</string>
    <string name="messages_more">more</string>
    <string name="sex_male">male</string>
    <string name="sex_female">female</string>
    <string name="my_title">My Information</string>
    <string name="my_avatar">My Avatar</string>
    <string name="username_label">Username:</string>
    <string name="my_sex">Sex:</string>
    <string name="my_email">Email:</string>
    <string name="my_birthday">Birthday:</string>
    <string name="my_address">Address:</string>
    <string name="logout">Logout</string>
    <string name="mail_list">MailList</string>
    <string name="add_friend_username">Please enter your friend\'s username</string>
    <string name="search">Search</string>
    <string name="add_friend">Add Friend</string>
    <string name="new_friends">New Friends</string>
    <string name="accept">Accept</string>
    <string name="has_accept">Has Accept</string>
    <string name="my_friend">My Friend</string>
</resources>
