<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/friend_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="">

        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center"
            android:text="@string/username_label"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_big" />

        <TextView
            android:id="@+id/friend_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="left|center"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_big" />

        <ImageView
            android:id="@+id/friend_avatar"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:background="@drawable/avatar_background"
            android:contentDescription="@string/my_avatar"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center"
            android:text="@string/my_sex"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_middle" />

        <TextView
            android:id="@+id/friend_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="left|center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_middle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center"
            android:text="@string/my_email"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_middle" />

        <TextView
            android:id="@+id/friend_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="left|center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_middle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center"
            android:text="@string/my_birthday"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_middle" />

        <TextView
            android:id="@+id/friend_birthday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="left|center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_middle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center"
            android:text="@string/my_address"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_middle" />

        <TextView
            android:id="@+id/friend_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="left|center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text_middle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        android:gravity="center"
        android:layout_marginTop="10dip">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/add_friend"
            android:textColor="@color/white"
            android:background="@drawable/add_friend_button"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>