<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/mail_list" />

    <LinearLayout
        android:id="@+id/new_friends_click"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/click_white_area"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/new_friends" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_friends"
                android:textSize="@dimen/normal_text_big"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center">

            <ImageView
                android:id="@+id/new_icon"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/new_icon" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        app:layout_constraintTop_toBottomOf="@+id/new_friends_click">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/my_friend"
            android:textColor="@color/no_importance"
            android:textSize="@dimen/normal_text_middle" />
    </LinearLayout>

    <ListView
        android:id="@+id/my_friend_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13" />

</androidx.constraintlayout.widget.ConstraintLayout>